Finally managed to create some kind of simple database handling system